--- a/adivina/templates/adivina/guess.html
+++ b/adivina/templates/adivina/guess.html
@@ -6,7 +6,9 @@
     <title></title>
 </head>
 <body>
-    <h1>{{message }}</h1>
-    <a href="{% url 'home' %}"></a>
+    <h1>{{ message }}</h1>
+    <form action="{% url 'home' %}">
+        <button  type="submit">Submit</button>
+    </form>
 </body>
 </html>
